--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "no-underscore-dangle": "off",
         "quote-props": "off",
         "sort-imports": "off",
+        "callback-return":"off",
         "sort-keys": "off",
         "sort-vars": "off",
         "comma-dangle": "off",
