--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "parcel src/index.html --open",
+    "start": "parcel src/index.html --open --log-level 3 --global app",
     "build": "parcel build src/index.html --public-url . --detailed-report --no-cache --out-dir ./build"
   },
   "devDependencies": {
