--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,9 @@
         "no-underscore-dangle": "off",
         "quote-props": "off",
         "sort-imports": "off",
-        "callback-return":"off",
+        "callback-return": "off",
         "sort-keys": "off",
+        "function-paren-newline": "off",
         "sort-vars": "off",
         "comma-dangle": "off",
         "guard-for-in": "off",
