--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "sort-keys": "off",
         "function-paren-newline": "off",
         "sort-vars": "off",
+        "max-classes-per-file": "off",
         "comma-dangle": "off",
         "guard-for-in": "off",
         "one-var": "off",
