--- a/package.json
+++ b/package.json
@@ -4,19 +4,16 @@
   "main": "src/barrel",
   "typings": "src/index",
   "scripts": {
-    "start": "parcel public/index.html --open --global app",
-    "build": "parcel build public/index.html --public-url . --detailed-report --no-cache --out-dir ./build",
-    "watch": "parcel watch public/index.html --public-url . --out-dir watch/ --no-cache"
+    "build": "./node_modules/.bin/babel src --out-dir lib"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-runtime": "^6.26.0",
-    "eslint": "^5.3.0",
-    "parcel-bundler": "^1.9.7"
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "typescript": "^3.0.3"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "marked": "^0.4.0"
   }
 }
