--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/barrel",
   "typings": "src/index",
   "scripts": {
+    "start": "webpack --watch",
     "build": "./node_modules/.bin/babel src --out-dir lib"
   },
   "devDependencies": {
@@ -25,6 +26,6 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "marked": "^0.4.0"
+    "marked": "^0.5.0"
   }
 }
