--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/webpack": "^4.4.12",
     "@types/webpack-env": "^1.13.6",
     "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.23.0",
     "ts-loader": "^5.1.1",
