--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "src/barrel",
   "typings": "src/index",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "./node_modules/.bin/babel src --out-dir lib"
+    "start": "webpack-dev-server --open --mode=development --progress --colors",
+    "build": "webpack --mode=production"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
