--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
   "name": "dynamic-text-html",
   "version": "1.2.2",
-  "main": "src/barrel.ts",
-  "typings": "src/typings.d.ts",
+  "main": "src/barrel",
+  "typings": "./typings.d.ts",
   "scripts": {
-    "start:webpack": "webpack-dev-server --open --mode=development --progress --colors",
-    "build:webpack": "webpack --mode=production",
+    "start": "webpack-dev-server --open --mode=development --progress --colors",
+    "build": "webpack --mode=production",
     "start:parcel": "parcel public/index.parcel.html --open",
     "build:parcel": "parcel build --public-url . --out-dir ./parcel-build",
-    "deploy": "tsc ./src/barrel.ts --outDir ./deploy"
+    "deploy": "tsc --outDir ./deploy"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@types/marked": "^0.4.1",
-    "@types/node": "^10.10.3",
+    "@types/node": "^10.11.1",
     "@types/webpack": "^4.4.12",
     "@types/webpack-env": "^1.13.6",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "parcel-bundler": "^1.10.1",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.23.0",
-    "ts-loader": "^5.1.1",
+    "ts-loader": "^5.2.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3",
-    "webpack": "^4.19.1",
+    "util": "^0.11.0",
+    "webpack": "^4.20.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "marked": "^0.5.0"
+    "marked": "^0.5.1"
   }
 }
