--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dynamic-text-html",
   "version": "1.2.2",
-  "main": "src/barrel",
+  "main": "deploy/barrel.js",
   "typings": "./typings.d.ts",
   "scripts": {
     "start": "webpack-dev-server --open --mode=development --progress --colors",
