added show file names in divs

--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "main": "deploy/barrel.js",
   "typings": "./typings.d.ts",
   "scripts": {
-    "start": "webpack-dev-server --open --mode=development --progress --colors",
-    "build": "webpack --mode=production",
-    "start:parcel": "parcel public/index.parcel.html --open --log-level 4",
-    "build:parcel": "parcel build --public-url . --out-dir ./parcel-build",
+    "start": "parcel public/index.parcel.html --open --log-level 4",
+    "build": "webpack --mode=production --progress --colors",
     "deploy": "tsc --outDir ./deploy"
   },
   "devDependencies": {
