--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "dynamic-text-html",
   "version": "3.1.0",
-  "main": "deploy/barrel.js",
+  "main": "deploy-webpack/main.bundle.js",
   "typings": "./typings.d.ts",
   "scripts": {
     "start": "parcel public/index.html --open --log-level 4",
     "build": "webpack --mode=production --progress --colors",
+    "deploy-webpack": "webpack --mode=development --progress --colors --config deploy.config.js",
     "deploy": "tsc --outDir ./deploy"
   },
   "devDependencies": {
@@ -24,12 +25,12 @@
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
     "typescript": "^3.1.6",
-    "webpack": "^4.25.1",
+    "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "@babel/polyfill": "^7.0.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "marked": "^0.5.1"
+    "marked": "^0.5.2"
   }
 }
