--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "dynamic-text-html",
   "version": "3.1.3",
-  "main": "deploy/main.bundle.js",
+  "main": "deploy/barrel.js",
   "typings": "./typings.d.ts",
   "scripts": {
     "start": "parcel public/index.html --open --log-level 4",
     "build": "webpack --mode=production --progress --colors",
-    "deploy": "webpack --mode=development --progress --colors --config deploy.config.js"
+    "deploy-wp": "webpack --mode=development --progress --colors --config deploy.config.js",
+    "deploy": "tsc --outDir ./deploy"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
