--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@types/marked": "^0.4.2",
     "@types/node": "^10.12.9",
@@ -27,8 +28,7 @@
     "typescript": "^3.1.6",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "@babel/polyfill": "^7.0.0"
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "marked": "^0.5.2"
