--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
   "name": "dynamic-text-html",
-  "version": "3.5.5",
+  "version": "3.5.6",
   "main": "dist/barrel.js",
   "typings": "./typings.d.ts",
   "scripts": {
-    "start": "parcel public/index.html --open --log-level 4",
+    "start": "parcel public/index.html --open --log-level 4 --no-cache",
     "build-wp": "webpack --mode=production --progress --colors",
     "build": "tsc --outDir ./dist",
     "deploy": "yarn build && yarn version"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@types/marked": "^0.4.2",
     "@types/node": "^10.12.10",
-    "@types/webpack": "^4.4.19",
+    "@types/webpack": "^4.4.20",
     "@types/webpack-env": "^1.13.6",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "parcel-bundler": "^1.10.3",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.23.1",
-    "ts-loader": "^5.3.0",
+    "ts-loader": "^5.3.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.6",
+    "typescript": "^3.2.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
