--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/webpack": "^4.4.21",
     "@types/webpack-env": "^1.13.6",
     "css-loader": "^2.0.1",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
@@ -26,8 +27,7 @@
     "typescript": "^3.2.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "file-loader": "^2.0.0"
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "marked": "^0.5.2"
