--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "marked": "^0.5.2"
+    "marked": "^0.5.2",
+    "materialize-css": "^1.0.0"
   }
 }
