--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@types/virtual-dom": "^2.1.0",
     "marked": "^0.6.0",
-    "materialize-css": "^1.0.0"
+    "materialize-css": "^1.0.0",
+    "virtual-dom": "^2.1.1"
   }
 }
