--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/virtual-dom": "^2.1.0",
     "@types/webpack": "^4.4.24",
     "@types/webpack-env": "^1.13.6",
+    "@types/xregexp": "^3.0.29",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "marked": "^0.6.0",
-    "virtual-dom": "^2.1.1"
+    "virtual-dom": "^2.1.1",
+    "xregexp": "^4.2.4"
   }
 }
