--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "dynamic-text-html",
-  "version": "4.2.0",
+  "version": "4.2.1",
   "main": "dist/barrel.js",
   "typings": "./typings.d.ts",
   "scripts": {
     "start": "webpack-dev-server --mode=development --progress --colors --open",
     "build-wp": "webpack --mode=production --progress --colors",
-    "build": "tsc --outDir ./dist",
+    "build": "tsc --outDir ./dist && babel ./dist -d ./dist",
     "deploy": "yarn build && npm publish"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
+    "@types/core-js": "^2.5.0",
     "@types/marked": "^0.6.0",
-    "@types/node": "^10.12.21",
+    "@types/node": "^10.12.23",
     "@types/virtual-dom": "^2.1.0",
     "@types/webpack": "^4.4.24",
     "@types/webpack-env": "^1.13.7",
     "@types/xregexp": "^3.0.29",
+    "core-js": "^2.6.4",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -27,7 +30,7 @@
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
-    "typescript": "^3.3.1",
+    "typescript": "^3.3.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
