--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamic-text-html",
-  "version": "4.3.0",
+  "version": "5.0.0-beta.0",
   "main": "dist/barrel.js",
   "typings": "./typings.d.ts",
   "scripts": {
