--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
+    "@babel/core": "^7.3.4",
     "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-env": "^7.3.4",
     "@types/core-js": "^2.5.0",
     "@types/marked": "^0.6.1",
-    "@types/node": "^11.9.4",
+    "@types/node": "^11.9.5",
     "@types/virtual-dom": "^2.1.0",
     "@types/webpack": "^4.4.24",
     "@types/webpack-env": "^1.13.7",
     "@types/xregexp": "^3.0.29",
+    "babel-loader": "^8.0.5",
     "core-js": "^2.6.5",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
@@ -30,11 +31,11 @@
     "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
-    "tslint": "^5.12.1",
+    "tslint": "^5.13.0",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.0"
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "marked": "^0.6.1",
